@@ -24,6 +24,8 @@
 	(PokerRendererTests.test21_handleLobbyUnknownAction): Wrote method.
 	(PokerRendererTests.test22_currencySerial2NameNotString): Wrote method.
 	(PokerRendererTests.test24_handleHandsUnknownActoin): Wrote test.
+	(PokerRendererTests.test26_handleHandsReplayHand): Wrote test.
+	(PokerRendererTests.test25_handleHandsOutOfState): Wrote test.
 
 	* pokerui/pokerrenderer.py (PokerRenderer._handleConnection):
 	error message for bad outfit should print outfits, not urls.
